--- a/blog-page-design-1/css/main.css
+++ b/blog-page-design-1/css/main.css
@@ -1,4 +1,3 @@
-/* Normalize && Reset */
 *,
 *:before,
 *:after {
@@ -20,7 +19,8 @@ h3,
 h4,
 p,
 ol,
-ul {
+ul,
+hr {
   margin: 0;
   padding: 0;
 }
@@ -44,6 +44,10 @@ button {
 a {
   text-decoration: none;
 }
+a:active,
+a:hover {
+  outline: 0;
+}
 img {
   max-width: 100%;
   height: auto;
@@ -61,7 +65,9 @@ button {
   padding: 0;
   border: 0;
 }
-/* Styles */
-html {
-  background-color: #008000;
+body {
+  font-size: 62.5%;
+}
+.container {
+  font-size: 2rem;
 }
