--- a/company-website/css/main.styl
+++ b/company-website/css/main.styl
@@ -1,1 +1,97 @@
 // out: main.css, sourcemap: false, compress: true
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+
+html, body
+  margin 0px
+  padding 0px
+  width 100%
+  height 100%
+  font-size 62.5%
+  font-family: 'Montserrat', sans-serif;
+  overflow-x hidden
+
+h1, h2, h3, h4, h5
+  margin 0
+  padding 0
+
+.container
+  width 100%
+  height 100%
+  font-size 1.6rem
+
+nav
+  width 100%
+  height 6rem
+  padding-top 1rem
+  h1
+    margin-left 10rem
+    line-height 5rem
+
+img
+  opacity 0.9
+
+.img-container
+  width 100%
+  height 60rem
+  img
+    display inline-block
+    width 100%
+    min-height 35rem
+    height auto
+/* 3 column grid */
+.about
+  width 100%
+  height 60rem
+  margin-top 10rem
+  .box-container
+    width 100%
+    height 100%
+    background-color #fff
+    .info-box
+      display inline-block
+      float left
+      margin-left 15rem
+      text-align center
+      width 40rem
+      height 100%
+      padding 1rem
+
+      img
+        width 25rem
+        height 25rem
+        margin-bottom 1rem
+        border-radius 50%
+      p
+        width 100%
+        height 20rem
+        position relative
+        bottom -1rem
+        margin-top 2rem
+        font-size 2.2rem
+        opacity 0.8
+
+.get-in-touch
+  width 40rem
+  height 10rem
+  font-size 4rem
+  margin 0 auto
+  ~ hr
+    width 52rem
+    margin 0 auto
+    height 1  px
+    background-color #18ACDD
+.contact
+  width 80%
+  height 50rem
+  padding 10rem
+  margin 0 auto
+  .map
+    display inline-block
+    float left
+    margin-left 10rem
+  .address
+    float right
+    margin-right 20rem
+  p
+    font-size 2.2rem
+    opacity 0.7
