Fix element sizes for mobile version

--- a/company-website/css/main.styl
+++ b/company-website/css/main.styl
@@ -194,6 +194,9 @@ nav
 
 @media(max-width 50rem)
   .img-container
+    h1
+      font-size 1.2rem
+      padding-left 1rem
     .heading
       .heading-text
         h3
