--- a/company-website/css/main.styl
+++ b/company-website/css/main.styl
@@ -1,4 +1,10 @@
 // out: main.css, sourcemap: false, compress: true
+
+/* Variables */
+transparent_black = rgba(0,0,0,.3)
+bitter_lemon = #E5F04C
+sulu = #D1E751//#B1CF72
+
 html
   margin 0px
   padding 0px
@@ -24,55 +30,78 @@ h1, h2, h3, h4, h5
   width 100%
   height auto
   font-size 1.6rem
+/*
+  The menu is fixed.
+*/
 nav
-  display none
+  position fixed
   width 100%
   height 6rem
-  padding-top 1rem
+  background-color #000
+  z-index 1000
+  line-height 6rem
+  decoration none
   h1
-    margin-left 10rem
-    line-height 5rem
+    position absolute
+    left 4rem
+    color #fff
+    font-size 2.2rem
+  .menu
+    position absolute
+    right 10%
+    font-size 2rem
+    font-weight bold
+  a
+    display inline-block
+    width 10rem
+    height 6rem
+    text-align center
+    text-decoration none
+    margin-left 2rem
+  a:link
+    color #fff
+  a:hover
+    background-color #fff
+    color #000
 
+/*
+  Header image container is always 100% wide, but resizes
+  horizontally.
+*/
 .img-container
   position relative
   width 100%
-  h1
-    position absolute
-    width 100%
-    top 0rem
-    height 5rem
-    padding-left 4rem
-    margin-bottom -20rem
-    line-height 5rem
-    font-size 2rem
-    color #fff
-    z-index 1000
+  max-height 60rem
+  /* Add padding with the menu height */
+  padding-top 6rem
+  /* Make image self crop */
+  overflow hidden
   .heading
     position absolute
-    bottom 0rem
     width 100%
     height 100%
+    bottom 0
     text-align center
     font-weight bold
     z-index 900
-    background-color rgba(0,0,0,.6)
-    color #fff//#343838
+    color #fff
+    background-color transparent_black
     .heading-text
       position absolute
-      bottom 0
       width 100%
+      height 20rem
+      bottom 5%
+      text-align center
       h3
         font-size 5rem
       p
-        font-size 3rem
+        font-size 2.5rem
   .arrow
     width 10rem
     height 10rem
   .header-image
     width 100%
-    min-height 18rem
-    height auto
-    opacity 0.8
+    min-height 30rem
 
 /* 3 column grid */
 .about
@@ -113,10 +142,9 @@ nav
         width 30rem
         line-height 10rem
         height 10rem
-        background-color #D1E751//#A7E82E
+        background-color sulu//#D1E751//#A7E82E
         margin 0 auto
         margin-bottom 10rem
-        opacity 0.8
 .get-in-touch
   /* Clear floats from the top 3 elements */
   clear both
