--- a/company-website/css/main.styl
+++ b/company-website/css/main.styl
@@ -109,7 +109,7 @@ nav
   width 100%
   height auto
   min-height 60rem
-  margin-top 8rem
+  margin-top 10rem
   font-family: 'Roboto Condensed', sans-serif;
   .box-container
     width 100%
@@ -129,14 +129,13 @@ nav
         margin-bottom 1rem
         border-radius 50%
       .description
-        width 100%
+        width 90%
         height 15rem
+        margin 0 auto;
         position relative
-        bottom -1rem
         margin-top 2rem
+        margin-bottom 2rem
         font-size 3.5rem
-        // font-weight bold
-        opacity 1
       .learn-more
         font-size 3rem
         width 30rem
@@ -148,17 +147,19 @@ nav
 .get-in-touch
   /* Clear floats from the top 3 elements */
   clear both
-  width 40rem
-  height 10rem
+  width 80%
+  height 18rem
+  text-align center
+  padding-top 4rem
   font-size 4rem
   margin 0 auto
-  // background-color hotpink
-  ~ hr
-    //position relative
-    width 52rem
-    margin 0 auto
-    height 1  px
-    background-color #18ACDD
+  p
+    font-size 2.2rem
+hr.git
+  width 100%
+  height 1px
+  background-color #18ACDD
+
 .contact
   width 80%
   height 50rem
