Fix padding bug in footer

--- a/company-website/css/main.styl
+++ b/company-website/css/main.styl
@@ -148,9 +148,9 @@ nav
   /* Clear floats from the top 3 elements */
   clear both
   width 80%
-  height 18rem
   text-align center
-  padding-top 4rem
+  padding-top 5rem
+  padding-bottom 5rem
   font-size 4rem
   margin 0 auto
   p
