--- a/company-website/css/main.styl
+++ b/company-website/css/main.styl
@@ -30,6 +30,8 @@ h1, h2, h3, h4, h5
   width 100%
   height auto
   font-size 1.6rem
+  font-family: 'Ubuntu Condensed', sans-serif;
+
 /*
   The menu is fixed.
 */
@@ -46,6 +48,7 @@ nav
     left 4rem
     color #fff
     font-size 2.2rem
+    font-family 'Montserrat', serif
   .menu
     position absolute
     right 10%
@@ -110,7 +113,7 @@ nav
   height auto
   min-height 60rem
   margin-top 10rem
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Ubuntu Condensed', sans-serif;
   .box-container
     width 100%
     height 100%
@@ -126,14 +129,13 @@ nav
       img
         width 25rem
         height 25rem
-        margin-bottom 1rem
         border-radius 50%
       .description
         width 90%
         height 15rem
         margin 0 auto;
         position relative
-        margin-top 2rem
+        margin-top 5rem
         margin-bottom 2rem
         font-size 3.5rem
       .learn-more
@@ -165,7 +167,6 @@ hr.git
   height 50rem
   padding 10rem
   margin 0 auto
-  font-family: 'Roboto Condensed', sans-serif;
   .map
     float left
     margin-left 10rem
