--- a/company-website/css/main.styl
+++ b/company-website/css/main.styl
@@ -1,4 +1,4 @@
-// out: main.css, sourcemap: false, compress: true
+// out: main.css, sourcemap: false, compress: false
 
 /* Variables */
 transparent_black = rgba(0,0,0,.3)
@@ -28,10 +28,8 @@ h1, h2, h3, h4, h5
 
 .container
   width 100%
-  height auto
   font-size 1.6rem
   font-family: 'Ubuntu Condensed', sans-serif;
-
 /*
   The menu is fixed.
 */
@@ -49,6 +47,8 @@ nav
     color #fff
     font-size 2.2rem
     font-family 'Montserrat', serif
+  img
+    display none
   .menu
     position absolute
     right 10%
@@ -61,6 +61,7 @@ nav
     text-align center
     text-decoration none
     margin-left 2rem
+    color #fff
   a:link
     color #fff
   a:hover
@@ -75,7 +76,7 @@ nav
   position relative
   width 100%
   max-height 60rem
-  /* Add padding with the menu height */
+  /* Add padding to account for the fixed menu height */
   padding-top 6rem
   /* Make image self crop */
   overflow hidden
@@ -88,10 +89,10 @@ nav
     font-weight bold
     z-index 900
     color #fff
-    background-color transparent_black
+    background-color transparent_black;
     .heading-text
       position absolute
-      width 100%
+      width 95%
       height 20rem
       bottom 5%
       text-align center
@@ -148,7 +149,7 @@ nav
         margin-bottom 10rem
 .get-in-touch
   /* Clear floats from the top 3 elements */
-  clear both
+  // clear both
   width 80%
   text-align center
   padding-top 5rem
@@ -162,33 +163,43 @@ hr.git
   height 1px
   background-color #18ACDD
 
+/* Footer */
 .contact
-  width 80%
-  height 50rem
-  padding 10rem
+  width 100%
+  height auto
   margin 0 auto
+  padding-top 10rem
   .map
+    display inline-block
     float left
-    margin-left 10rem
+    margin-left 15%
   .address
+    display inline-block
+    width 30rem
     float right
-    margin-right 20rem
+    margin-right 15%
+  h2
+    font-size 3.5rem
   p
-    font-size 2.2rem
+    font-size 2.5rem
     opacity 0.7
 
 /* Mobile version */
 
-/* Styles for contact info */
-@media(max-width 90rem)
+/* Move map and contact info close to the screen edges. */
+@media(max-width 1500px)
   .contact
-    width 100%
     .map
-      margin 0
+      margin-left 5%
+    .address
+      margin-left 5%
 
-@media(max-width 72rem)
+/*
+  Move the info boxes to a row layout. Hide the map, there is no space for it */
+@media(max-width 1200px)
   .about
     width inherit
+    margin-top 5rem
     .box-container
       width inherit
       .info-box
@@ -200,41 +211,58 @@ hr.git
           width 100%
           height 15rem
           line-height 15rem
-  /*
-    Styles for map and adress
-    Don't display the map on phones
-  */
   .contact
-    clear both
-    width 100%
-    text-align center
+    padding-top 5rem
     .map
       display none
     .address
-      position absolute
-      width 100%
-      left 12%
-      font-size 2.5rem
-    .col-left
-      float left
-    .col-rigth
-      float right
-    hr
-      display none
+      display block
+      float none
+      text-align center
+      margin 0 auto
+      margin-bottom 5rem
 
-@media(max-width 50rem)
+/* Mobile style for the menu*/
+@media(max-width 1000px)
+  .hamburger
+    display none
+    position fixed
+    padding-top 2rem
+    right 0 !important
+    width 100%
+    height 35rem
+    background-color black
+    .hamburger-icon
+      position absolute
+      right 2rem
+      height 8rem
+      width 5rem
+      display inline // reverses display:none
+      background-color #fff
+      width 10rem
+    a
+      display block
+      margin 0 auto
+      width 100%
+      height 8rem
+      line-height 8rem
+      color #fff
+    a:hover
+     background-color white
+     color #000
+    a:link
+      color #fff
+
+/* Make images and buttons smaller on mobile phones */
+@media(max-width 800px)
   .img-container
-    h1
-      font-size 1.2rem
-      padding-left 1.2rem
     .heading
       .heading-text
         h3
-          font-size 3rem
+          font-size 4rem
     .arrow
-      width 5rem
-      height 5rem
-/* Make images and learn more buttons smaller on phones*/
+      width 8rem
+      height 8rem
   .about
     .box-container
       .info-box
@@ -242,10 +270,6 @@ hr.git
           width 20rem
           height 20rem
         .learn-more
+          width 100%
           height 10rem
           line-height 10rem
-  .contact
-    height 20rem
-    .address
-      width 100%
-      left 5%
