--- a/company-website/css/main.css
+++ b/company-website/css/main.css
@@ -46,7 +46,7 @@ nav h1 {
   left: 4rem;
   color: #fff;
   font-size: 2.2rem;
-  font-family: 'Montserrat', serif;
+  font-family: 'Montserrat', sans-serif;
 }
 nav img {
   display: none;
@@ -306,4 +306,34 @@ hr.git {
     height: 10rem;
     line-height: 10rem;
   }
+}
+/****************************************
+Services page styles
+****************************************/
+table {
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 5rem;
+  margin-bottom: 8rem;
+  border: 1px solid #000;
+  padding: 2rem;
+  font-size: 1.8rem;
+}
+table tr {
+  border: 1px solid #000;
+  width: 100%;
+  height: 5rem;
+}
+table th {
+  border-bottom: 1px solid #000;
+  background-color: #fff;
+  font-size: 3rem;
+  padding-bottom: 2rem;
+}
+table td {
+  padding: 2rem;
+  border-bottom: 1px solid #000;
+}
+table tr:nth-child(odd) {
+  background-color: #d1e751;
 }
