--- a/company-website/css/main.css
+++ b/company-website/css/main.css
@@ -36,6 +36,7 @@ nav {
   position: fixed;
   width: 100%;
   height: 6rem;
+  top: 0;
   background-color: #000;
   z-index: 1000;
   line-height: 6rem;
@@ -310,6 +311,10 @@ hr.git {
 /****************************************
 Services page styles
 ****************************************/
+/* Add top margin only to the first table to account for the navbar*/
+table:first-of-type {
+  margin-top: 10rem;
+}
 table {
   width: 80%;
   margin: 0 auto;
