--- a/company-website/css/main.styl
+++ b/company-website/css/main.styl
@@ -39,6 +39,7 @@ nav
   position fixed
   width 100%
   height 6rem
+  top 0
   background-color #000
   z-index 1000
   line-height 6rem
@@ -279,6 +280,9 @@ hr.git
 /****************************************
 Services page styles
 ****************************************/
+/* Add top margin only to the first table to account for the navbar*/
+table:first-of-type
+  margin-top 10rem
 table
   width 80%
   margin 0 auto
