--- a/company-website/css/main.css
+++ b/company-website/css/main.css
@@ -29,6 +29,10 @@ h5 {
   font-size: 1.6rem;
   font-family: 'Ubuntu Condensed', sans-serif;
 }
+a {
+  text-decoration: none;
+  color: #000;
+}
 /*
   The menu is fixed.
 */
@@ -255,30 +259,30 @@ hr.git {
 }
 /* Mobile style for the menu*/
 @media (max-width: 1000px) {
+  .hamburger-icon {
+    position: absolute;
+    top: 0.5rem;
+    right: 1rem;
+    height: 5rem;
+    width: 8rem;
+    display: inline-block;
+    z-index: 4000;
+  }
   .hamburger {
     display: none;
     position: fixed;
     padding-top: 2rem;
     right: 0 !important;
     width: 100%;
-    height: 35rem;
+    height: 45rem;
     background-color: #000;
-  }
-  .hamburger .hamburger-icon {
-    position: absolute;
-    right: 2rem;
-    height: 8rem;
-    width: 5rem;
-    display: inline;
-    background-color: #fff;
-    width: 10rem;
   }
   .hamburger a {
     display: block;
     margin: 0 auto;
     width: 100%;
-    height: 8rem;
-    line-height: 8rem;
+    height: 7rem;
+    line-height: 7rem;
     color: #fff;
   }
   .hamburger a:hover {
@@ -332,7 +336,16 @@ table th {
   border-bottom: 1px solid #000;
   background-color: #fff;
   font-size: 3rem;
+  line-height: 3rem;
   padding-bottom: 2rem;
+}
+table th.th-secondary {
+  font-size: 2rem;
+  line-height: 2rem;
+  padding-bottom: 0rem;
+}
+table th.grey-row {
+  background-color: #e6e6e6;
 }
 table td {
   padding: 2rem;
@@ -340,4 +353,18 @@ table td {
 }
 table tr:nth-child(odd) {
   background-color: #d1e751;
+}
+/****************************************
+Blog page styles
+****************************************/
+.content {
+  margin-top: 8rem;
+}
+.questions {
+  float: left;
+  width: 30rem;
+}
+.answers {
+  float: right;
+  width: 50rem;
 }
