--- a/company-website/css/main.styl
+++ b/company-website/css/main.styl
@@ -32,6 +32,12 @@ h1, h2, h3, h4, h5
   width 100%
   font-size 1.6rem
   font-family font_ubuntu
+
+a
+  text-decoration none
+  color #000
+
+
 /*
   The menu is fixed.
 */
@@ -227,35 +233,35 @@ hr.git
 
 /* Mobile style for the menu*/
 @media(max-width 1000px)
+  .hamburger-icon
+    position absolute
+    top 0.5rem
+    right 1rem
+    height 5rem
+    width 8rem
+    display inline-block
+    z-index 4000
+
   .hamburger
     display none
     position fixed
     padding-top 2rem
     right 0 !important
     width 100%
-    height 35rem
+    height 45rem
     background-color black
-    .hamburger-icon
-      position absolute
-      right 2rem
-      height 8rem
-      width 5rem
-      display inline // reverses display:none
-      background-color #fff
-      width 10rem
     a
       display block
       margin 0 auto
       width 100%
-      height 8rem
-      line-height 8rem
+      height 7rem
+      line-height 7rem
       color #fff
     a:hover
      background-color white
      color #000
     a:link
       color #fff
-
 /* Make images and buttons smaller on mobile phones */
 @media(max-width 800px)
   .img-container
@@ -298,9 +304,29 @@ table
     border-bottom slim_black
     background-color #fff
     font-size 3rem
+    line-height 3rem
     padding-bottom 2rem
+  th.th-secondary
+    font-size 2rem
+    line-height 2rem
+    padding-bottom 0rem
+  th.grey-row
+    background-color #e6e6e6
   td
     padding 2rem
     border-bottom slim_black
   tr:nth-child(odd)
     background-color sulu
+
+/****************************************
+Blog page styles
+****************************************/
+.content
+  margin-top 8rem
+.questions
+  float left
+  width 30rem
+
+.answers
+  float right
+  width 50rem
